 Revision history for Log::Log4perl
##################################################
1.34 (not yet released)
   *    (ms) InternalDebug now replaces all instances of INTERNAL_DEBUG,
             not just the first one.
   *    (ms) Added test case for get_logger() with a ref() on the actual
             object instead of on a static category. Updated docs.

1.33 (2011/05/31)
   *    (ms) [RT 67132] Applied patch by Darin McBride to allow for
             empty syswrite messages in the file appender.
   *    (ms) [RT 68105] Fixed init-hash handling of subroutine references,
             reported by Frew Schmidt.
   *    (ms) Mike Schwern noticed confusing DESTROY calls to clean up loggers 
             and appenders (http://stackoverflow.com/questions/5914088 and
             https://github.com/mschilli/log4perl/issues/7), so I put on my 
             hazmat suit and cleaned it up. Now perl's garbage collector takes 
             care of disposing of logger and appender carcasses.
   *    (ms) Added Log::Log4perl->remove_logger($logger) to remove a logger
             from the system.

1.32 (2011/02/26)
   *    (ms) Fixed %T caller_depth with wrapper_register(), reported
             by David Christensen.
   *    (ms) [RT 63053] Fixed for qw() {} deprecated (Todd Rinaldo)
   *    (ms) [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
             Etheridge).
   *    (ms) [RT 62896] Log::Log4perl::Appender::ScreenColoredLevels now 
             inherits from Log::Log4perl::Appender::Screen and therefore
             supports the utf8 flag.
   *    (ms) [RT 64318] Andrew Sayers provided a better error message for
             "threshold needs to be uppercase".
   *    (ms) CharleyDixon fixed LOGWARN when :no_extra_logdie_message is 
             in use to no longer exit().

1.31 (2010/10/27)
  *     (ms) Fixed the number of skipped tests for Windows for previous fix
             of [RT 60665].

1.30 (2010/08/30)