@@ -6,6 +6,7 @@
              not just the first one.
    *    (ms) Added test case for get_logger() with a ref() on the actual
              object instead of on a static category. Updated docs.
+   *    (ms) %d{e} in PatternLayout now returns epoch seconds
 
 1.33 (2011/05/31)
    *    (ms) [RT 67132] Applied patch by Darin McBride to allow for
